--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title th:text="${title}">Document</title>
 </head>
 <body>
     <h1 th:text="${title}"></h1>
-    <ul>
-        <li th:text="${name}"></li>
-        <li th:text="${lastname}"></li>
 
-    </ul>
+    <div th:if="${users.size() == 0}">No tiene usuarios</div>
 </body>
 </html>
