--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -8,6 +8,24 @@
 <body>
     <h1 th:text="${title}"></h1>
 
-    <div th:if="${users.size() == 0}">No tiene usuarios</div>
+    <div th:if="${users.isEmpty()}">No tiene usuarios</div>
+
+    <table>
+        <thead>
+        <tr>
+            <th>name</th>
+            <th>lastName</th>
+            <th>email</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr th:each="user: ${users}">
+                <td th:text="${user.name}"></td>
+                <td th:text="${user.lastName}"></td>
+                <td th:if="${user.email}" th:text="${user.email}"></td>
+                <td th:if="${user.email==null}" th:text="${'n/a'}"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
